--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Valetudo"
-        android:usesCleartextTraffic="true"
-        android:fullBackupContent="true">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activities.main.MainActivity"
             android:exported="true">
@@ -31,16 +31,13 @@
         </activity>
         <activity
             android:name=".ProvisioningWizardPageOneActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".ProvisioningWizardPageTwoActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".ProvisioningActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
